@@ -1,3 +1,8 @@
+* Fri Aug 09 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 0.5.0-0
+- Remove Puppet 4 support
+- Add Puppet 6 support
+- Add puppetlabs-stdlib 6 support
+
 * Tue Feb 26 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 0.4.1-0
 - Fixed a bug in the incrond_version fact in which an error message
   was displayed during fact resolution, on systems for which incron
